--- a/src/scheduler/view/Scheduler.fxml
+++ b/src/scheduler/view/Scheduler.fxml
@@ -309,7 +309,7 @@
                         </GridPane>
                         <ChoiceBox fx:id="groupChoiceBox2" layoutX="225.0" layoutY="14.0" prefWidth="150.0" />
                         <Label layoutX="161.0" layoutY="19.0" text="Group" />
-                        <Button layoutX="419.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleButton" text="Button" />
+                        <Button fx:id="button" layoutX="419.0" layoutY="14.0" mnemonicParsing="false" text="Button" />
                      </children>
                   </AnchorPane>
               </content>
